style: mobile nav menu updated

--- a/2/index.html
+++ b/2/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="reset.css" />
   <link rel="stylesheet" type="text/css" href="styles.css" />
+  <script defer src="script.js"></script>
   <title>Nav</title>
 </head>
   <body>
@@ -17,7 +18,19 @@
         </div>
         
         <div class="middle">
-          <button id="menu-toggle"></button>
+          <button id="menu-toggle" aria-expanded="false">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+          </button>
+          <nav id="menu">
+            <ul>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#about-us">About Us</a></li>
+              <li><a href="#contact-us">Contact Us</a></li>
+            </ul>
+          </nav>
         </div>
 
         <div class="group contact-group">
