style: nav bar updated for desktop view

--- a/2/index.html
+++ b/2/index.html
@@ -17,13 +17,23 @@
           <h3 class="logo">Logo</h3>
         </div>
         
-        <div class="middle">
+
+        <nav class="menu" id="desktop-menu">
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about-us">About Us</a></li>
+            <li><a href="#contact-us">Contact Us</a></li>
+          </ul>
+        </nav>
+        
+        <div id="mobile-middle">
           <button id="menu-toggle" aria-expanded="false">
             <span class="line"></span>
             <span class="line"></span>
             <span class="line"></span>
           </button>
-          <nav id="menu">
+          <nav class="menu">
             <ul>
               <li><a href="#home">Home</a></li>
               <li><a href="#services">Services</a></li>
