fix: script updated to toggle nav element attribute

--- a/2/index.html
+++ b/2/index.html
@@ -21,7 +21,7 @@
             <span class="line"></span>
             <span class="line"></span>
           </button>
-          <nav class="menu">
+          <nav class="menu" aria-expanded="false">
             <ul>
               <li><a href="#home">Home</a></li>
               <li><a href="#services">Services</a></li>
