--- a/2/index.html
+++ b/2/index.html
@@ -15,13 +15,24 @@
           <h3 class="logo">Logo</h3>
         </div>
        
-        <div class="group middle">
+        <div class="group middle mobile">
           <button id="menu-toggle" aria-expanded="false">
             <span class="line"></span>
             <span class="line"></span>
             <span class="line"></span>
           </button>
           <nav class="menu" aria-expanded="false">
+            <ul>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#about-us">About Us</a></li>
+              <li><a href="#contact-us">Contact Us</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="group middle tablet">
+          <nav class="menu">
             <ul>
               <li><a href="#home">Home</a></li>
               <li><a href="#services">Services</a></li>
